@@ -14,8 +14,6 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-import collections.abc
-
 smbox, _ = csm_tutor.question('smallbox')
 
 defaults = dict(smbox['defaults'])
